@@ -6,6 +6,7 @@ CheckSum Tool 0.3.0
   Rename About-menu to Help-menu
   Try to detemine file's type from filename when opening checksum file
   Add titles to Open- and Save As-dialogs
+  Make verified status three-state (not verified, verified OK and verify failed)
   BugFix: Don't add space to installer executable filename
 
 CheckSum Tool 0.2.0 - 2007-12-18 (r57)
